Modificamos el Index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="/css/estilos.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet"  href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>CV</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="columns ">
                 <div class="column">
-                     <img class="circular--square" src="/img/28.jpg" />
+                     <img class="circular--square" src="./img/28.jpg" />
                      <p class="titulo"> Nombre:</p><p id="nombre"></p> 
                      <p class="titulo">correo:</p><p id="correo"></p>
                      <p class="titulo"> Fecha de Nacimiento:</p><p id="fecha"></p> 
@@ -35,30 +35,30 @@
                      <p class="titulo">Contacto:</p> <p id="telefono"></p>
                      <ul class="list-desordenada">
                         <li> <button type="button" id="name"> 
-                                <img class="pequeñaN" src="/img/nombre.png" alt="Nombre">
+                                <img class="pequeñaN" src="./img/nombre.png" alt="Nombre">
                             </button>
                         </li>
                         <li> <button type="button" id="email">
-                                <img class="correo" src="/img/correo.jpg" alt="Email">
+                                <img class="correo" src="./img/correo.jpg" alt="Email">
                             </button>
                         </li>
                         <li> <button type="button" id="birth">
-                                <img class="fecha" src="/img/fecha de nacimiento.png" alt="Nacimiento">
+                                <img class="fecha" src="./img/fecha de nacimiento.png" alt="Nacimiento">
                             </button>
                         </li>
                         <li> <button type="button" id="direction">
-                                <img class="direccion" src="/img/ubicacion.png" alt="direccion">
+                                <img class="direccion" src="./img/ubicacion.png" alt="direccion">
                             </button>
                         </li>
                         <li> <button type="button" id="phone">
-                                <img class="telefono" src="/img/telefono.jpg" alt="contacto">
+                                <img class="telefono" src="./img/telefono.jpg" alt="contacto">
                             </button>
                         </li>
                      </ul> 
                 </div>
             </div>
         </div>
-        <script src="/js/info.js"></script>
+        <script src="./js/info.js"></script>
     </section>
  
     <!-- Footer -->
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
-                    <img src="/img/cv.jpg" alt="cv">
+                    <img src="./img/cv.jpg" alt="cv">
                 </div>
 
             </div>
